Text i sights Fixes #8

--- a/sights/index.html
+++ b/sights/index.html
@@ -1,174 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/reset.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Sights</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="topnav" id="myTopnav">
-      <a href="../" id="homeBtn"></a>
-      <a href="../">Home</a>
+        <a href="../" id="homeBtn"></a>
+        <a href="../">Home</a>
 
-      <a href="../traditions/">traditions</a>
-      <a href="../sights/" class="active">Sights</a>
-      <a href="../culture/">culture</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
+        <a href="../traditions/">traditions</a>
+        <a href="../sights/" class="active">Sights</a>
+        <a href="../culture/">culture</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </header>
     <section class="SightSection" id="s1">
-      <article>
-        <figure>
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg"
-            alt="Picture of the Hong Kong Skyline"
-          />
-          <figcaption>
-            <span
-              ><a
-                href="https://commons.wikimedia.org/wiki/File:Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg"
-                >Aaron Zhu</a
-              >,
-              <a href="https://creativecommons.org/licenses/by-sa/3.0"
-                >CC BY-SA 3.0</a
-              >, via Wikimedia Commons</span
-            >
-          </figcaption>
-        </figure>
-        <div>
-          <h1>The Skyline</h1>
-          <h2>
-            The best places two to enjoy the beautiful skyline of Hong Kong are
-            Victoria Peak and the Star Ferry ride along the waters surrounding
-            the city.
-          </h2>
-          <p>
-            Victoria Peak is the highest hill on the Island allowing for an
-            incredible view of the energetic and noisy city and skyscrapers. The
-            Star Ferry is a ferry with origins back in 1880, the skillful
-            drivers are experts at navigating the usually busy waters giving a
-            full showcase of the Skyline. This is one of the best deals you can
-            get in Hong Kong because it only costs a few Hong Kong Dollars.
-          </p>
-          <p>
-            Both of these attractions get better in the evening thanks to the
-            Symphony of Lights show. This is a light show that uses 360 degrees
-            lasers that hit the skyscrapers and it is one of the most popular
-            attractions that's free.
-          </p>
-        </div>
-      </article>
+        <article>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg"
+                    alt="Picture of the Hong Kong Skyline" />
+                <figcaption>
+                    <span><a
+                            href="https://commons.wikimedia.org/wiki/File:Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg">Aaron
+                            Zhu</a>,
+                        <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia
+                        Commons</span>
+                </figcaption>
+            </figure>
+            <div>
+                <h1>The Skyline</h1>
+                <h2>
+                    The best places two to enjoy the beautiful skyline of Hong Kong are
+                    Victoria Peak and the Star Ferry ride along the waters surrounding
+                    the city.
+                </h2>
+                <p>
+                    Victoria Peak is the highest hill on the Island allowing for an
+                    incredible view of the energetic and noisy city and skyscrapers. The
+                    Star Ferry is a ferry with origins back in 1880, the skillful
+                    drivers are experts at navigating the usually busy waters giving a
+                    full showcase of the Skyline. This is one of the best deals you can
+                    get in Hong Kong because it only costs a few Hong Kong Dollars.
+                </p>
+                <p>
+                    Both of these attractions get better in the evening thanks to the
+                    Symphony of Lights show. This is a light show that uses 360 degrees
+                    lasers that hit the skyscrapers and it is one of the most popular
+                    attractions that's free.
+                </p>
+            </div>
+        </article>
     </section>
     <br />
     <section class="SightSection" id="s2">
-      <article>
-        <figure>
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Hongkong_-_park_-_panoramio.jpg"
-            alt="Picture of Hong Kong Park"
-          />
-          <figcaption>
-            <span
-              ><a
-                href="https://commons.wikimedia.org/wiki/File:Hongkong_-_park_-_panoramio.jpg"
-                >Pavel Špindler</a
-              >,
-              <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a
-              >, via Wikimedia Commons</span
-            >
-          </figcaption>
-        </figure>
+        <article>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Hongkong_-_park_-_panoramio.jpg"
+                    alt="Picture of Hong Kong Park" />
+                <figcaption>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Hongkong_-_park_-_panoramio.jpg">Pavel
+                            Špindler</a>,
+                        <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>, via Wikimedia
+                        Commons</span>
+                </figcaption>
+            </figure>
 
-        <div>
-          <h1>Hong Kong Park</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
-            nihil obcaecati recusandae omnis delectus ad numquam id facilis
-            pariatur, minima dolor sequi, neque consectetur ex error perferendis
-            explicabo dolorem exercitationem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias,
-            nihil quibusdam ea minus aliquam officia nobis nulla ducimus ab
-            delectus. Hic pariatur debitis beatae error unde, dolorem magni!
-            Perferendis, error.
-          </p>
-        </div>
-      </article>
+            <div>
+                <h1>Hong Kong Park</h1>
+                <!-- Jag vet att det är lite men jag kom inte på mera -->
+                <p>
+                    The beautiful 8 hectare sized park in the city center contains attractions such as an aviary, a
+                    green house and a visual art center. The Aviary is home to 80+ bird species freely able to fly
+                    around inside the net barrier of the section. You might get to se some birds resting up in the canopy which there are walkways to get to. Sometimes you forget that you're in one of the busiest cities in the world.
+                </p>
+            </div>
+        </article>
     </section>
     <br />
     <section class="SightSection" id="s3">
-      <article>
-        <figure>
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/1/13/Tian_Tan_Buddha_by_Beria.jpg"
-            alt="Picture of Big Buddha Statue in Hong Kong"
-          />
-          <figcaption>
-            <span
-              ><a
-                href="https://commons.wikimedia.org/wiki/File:Tian_Tan_Buddha_by_Beria.jpg"
-                >Béria L. Rodríguez</a
-              >,
-              <a href="https://creativecommons.org/licenses/by-sa/3.0"
-                >CC BY-SA 3.0</a
-              >, via Wikimedia Commons</span
-            >
-          </figcaption>
-        </figure>
-        <div>
-          <h1>Big Buddha</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
-            nihil obcaecati recusandae omnis delectus ad numquam id facilis
-            pariatur, minima dolor sequi, neque consectetur ex error perferendis
-            explicabo dolorem exercitationem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias,
-            nihil quibusdam ea minus aliquam officia nobis nulla ducimus ab
-            delectus. Hic pariatur debitis beatae error unde, dolorem magni!
-            Perferendis, error.
-          </p>
-        </div>
-      </article>
+        <article>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Tian_Tan_Buddha_by_Beria.jpg"
+                    alt="Picture of Big Buddha Statue in Hong Kong" />
+                <figcaption>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Tian_Tan_Buddha_by_Beria.jpg">Béria L.
+                            Rodríguez</a>,
+                        <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia
+                        Commons</span>
+                </figcaption>
+            </figure>
+            <div>
+                <h1>Big Buddha</h1>
+                <p>
+                    This Statue took 12 years to build and is the biggest statue of Buddha in the world clocking in at
+                    34 meters high. Built in 1993 on Lantau Island’s Po Lin monastery, which is a collection of
+                    buildings that are used by monastics or monks. The statue is surrounded by green forest but also has
+                    views out over other islands and water.
+                </p>
+                <p>
+                    To get to the Buddha statue, you can either take a bus or a
+                    cable car to the Ngong Ping Village just a walk away from the statue. A worthwhile monument to
+                    visit.
+                </p>
+            </div>
+        </article>
     </section>
     <footer>
-      <ul>
-        <li>
-          <p>&copy; Company Corporation</p>
-        </li>
-        <li>
-          <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank"
-            >Terms of Service</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.google.com/maps/place/Cock+Island/@53.8376475,-9.3601112,15z/data=!3m1!4b1!4m5!3m4!1s0x48596712e291a56f:0x31d29d9bbfddb735!8m2!3d53.8376357!4d-9.3513564"
-            target="_blank"
-            >Contact</a
-          >
-        </li>
-        <li>
-          <a href="https://www.watching-grass-grow.com/" target="_blank"
-            >Licenses</a
-          >
-        </li>
-        <li>
-          <a href="https://youtu.be/71NAThAf5yw" target="_blank">Privacy</a>
-        </li>
-      </ul>
+        <ul>
+            <li>
+                <p>&copy; Company Corporation</p>
+            </li>
+            <li>
+                <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank">Terms of Service</a>
+            </li>
+            <li>
+                <a href="https://www.google.com/maps/place/Cock+Island/@53.8376475,-9.3601112,15z/data=!3m1!4b1!4m5!3m4!1s0x48596712e291a56f:0x31d29d9bbfddb735!8m2!3d53.8376357!4d-9.3513564"
+                    target="_blank">Contact</a>
+            </li>
+            <li>
+                <a href="https://www.watching-grass-grow.com/" target="_blank">Licenses</a>
+            </li>
+            <li>
+                <a href="https://youtu.be/71NAThAf5yw" target="_blank">Privacy</a>
+            </li>
+        </ul>
     </footer>
-  </body>
-  <script src="../src/index.js"></script>
+</body>
+<script src="../src/index.js"></script>
+
 </html>
