--- a/sights/index.html
+++ b/sights/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="topnav" id="myTopnav">
+    <nav class="topnav" id="myTopnav">
       <a href="../" id="homeBtn"></a>
       <a href="../">Home</a>
 
@@ -24,8 +24,8 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </header>
-    <section class="SightSection" id="s1">
+    </nav>
+    <div class="SightSection" id="s1">
       <article>
         <figure>
           <img
@@ -45,12 +45,12 @@
           </figcaption>
         </figure>
         <div>
-          <h1>The Skyline</h1>
-          <h2>
+          <h2>The Skyline</h2>
+          <h3>
             The best places two to enjoy the beautiful skyline of Hong Kong are
             Victoria Peak and the Star Ferry ride along the waters surrounding
             the city.
-          </h2>
+          </h3>
           <p>
             Victoria Peak is the highest hill on the Island allowing for an
             incredible view of the energetic and noisy city and skyscrapers. The
@@ -67,9 +67,9 @@
           </p>
         </div>
       </article>
-    </section>
+    </div>
     <br />
-    <section class="SightSection" id="s2">
+    <div class="SightSection" id="s2">
       <article>
         <figure>
           <img
@@ -89,24 +89,19 @@
         </figure>
 
         <div>
-          <h1>Hong Kong Park</h1>
+          
+        <h2>Hong Kong Park</h2>
+        <!-- Jag vet att det är lite men jag kom inte på mera -->
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
-            nihil obcaecati recusandae omnis delectus ad numquam id facilis
-            pariatur, minima dolor sequi, neque consectetur ex error perferendis
-            explicabo dolorem exercitationem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias,
-            nihil quibusdam ea minus aliquam officia nobis nulla ducimus ab
-            delectus. Hic pariatur debitis beatae error unde, dolorem magni!
-            Perferendis, error.
-          </p>
+            The beautiful 8 hectare sized park in the city center contains attractions such as an aviary, a
+            green house and a visual art center. The Aviary is home to 80+ bird species freely able to fly
+            around inside the net barrier of the section. You might get to se some birds resting up in the canopy which there are walkways to get to. Sometimes you forget that you're in one of the busiest cities in the world.
+        </p>
         </div>
       </article>
-    </section>
+    </div>
     <br />
-    <section class="SightSection" id="s3">
+    <div class="SightSection" id="s3">
       <article>
         <figure>
           <img
@@ -126,22 +121,21 @@
           </figcaption>
         </figure>
         <div>
-          <h1>Big Buddha</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
-            nihil obcaecati recusandae omnis delectus ad numquam id facilis
-            pariatur, minima dolor sequi, neque consectetur ex error perferendis
-            explicabo dolorem exercitationem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias,
-            nihil quibusdam ea minus aliquam officia nobis nulla ducimus ab
-            delectus. Hic pariatur debitis beatae error unde, dolorem magni!
-            Perferendis, error.
-          </p>
+            <h2>Big Buddha</h2>
+            <p>
+                This Statue took 12 years to build and is the biggest statue of Buddha in the world clocking in at
+                34 meters high. Built in 1993 on Lantau Island’s Po Lin monastery, which is a collection of
+                buildings that are used by monastics or monks. The statue is surrounded by green forest but also has
+                views out over other islands and water.
+            </p>
+            <p>
+                To get to the Buddha statue, you can either take a bus or a
+                cable car to the Ngong Ping Village just a walk away from the statue. A worthwhile monument to
+                visit.
+            </p>
         </div>
       </article>
-    </section>
+    </div>
     <footer>
       <ul>
         <li>
