--- a/culture/index.html
+++ b/culture/index.html
@@ -15,12 +15,12 @@
   </head>
   <body class="culture-body" id="Body">
     <nav class="topnav" id="myTopnav">
-      <a href="../" id="homeBtn"></a>
+      <a href="../" id="homeBtn" aria-label="Home button"></a>
       <a href="../">Home</a>
       <a href="../traditions/">traditions</a>
       <a href="../sights/">Sights</a>
       <a href="../culture/" class="active">culture</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="Open menu">
         <i class="fa fa-bars"></i>
       </a>
     </nav>
