Converterade bilder till .webp, snabbare laddning

--- a/culture/index.html
+++ b/culture/index.html
@@ -70,7 +70,7 @@
           </p>
           <div class="history-image-info-2">
             <img
-              src="../img/MapHongKong.png"
+              src="../img/MapHongKong.webp"
               alt=""
               class="history-map thumbnail"
             />
@@ -124,7 +124,7 @@
           </p>
           <div class="religion-image-info-1">
             <img
-              src="../img/Yin_yang.svg.png"
+              src="../img/Yin_yang.svg.webp"
               alt=""
               class="religion-image-1 thumbnail"
             />
@@ -147,7 +147,7 @@
           </p>
           <div class="religion-image-info-2">
             <img
-              src="../img/Confucius_Statue_at_the_Confucius_Temple.jpg"
+              src="../img/Confucius_Statue_at_the_Confucius_Temple.webp"
               alt=""
               class="religion-image-2 thumbnail"
             />
@@ -180,7 +180,7 @@
           </p>
           <div class="food-image-info-1">
             <img
-              src="../img/Dim_sum.jpg"
+              src="../img/Dim_sum.webp"
               alt=""
               class="food-dumplings thumbnail"
             />
@@ -202,7 +202,7 @@
           </p>
           <div class="food-image-info-2">
             <img
-              src="../img/Fishball.jpg"
+              src="../img/Fishball.webp"
               alt=""
               class="food-fishballs thumbnail"
             />
@@ -225,7 +225,7 @@
           </p>
           <div class="food-image-info-3">
             <img
-              src="../img/eggwaffle.jpg"
+              src="../img/eggwaffle.webp"
               alt=""
               class="food-eggwaffle thumbnail"
             />
