--- a/sights/index.html
+++ b/sights/index.html
@@ -29,7 +29,7 @@
       <article>
         <figure>
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg"
+            src="../sights/img/Hong_Kong_Skyline.webp"
             alt="Picture of the Hong Kong Skyline"
           />
           <figcaption>
@@ -73,7 +73,7 @@
       <article>
         <figure>
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Hongkong_-_park_-_panoramio.jpg"
+            src="../sights/img/1024px-Hong_Kong_Park_3.webp"
             alt="Picture of Hong Kong Park"
           />
           <figcaption>
@@ -105,7 +105,7 @@
       <article>
         <figure>
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/1/13/Tian_Tan_Buddha_by_Beria.jpg"
+            src="../sights/img/The_Big_Buddha_Hong_Kong_2013.webp"
             alt="Picture of Big Buddha Statue in Hong Kong"
           />
           <figcaption>
