--- a/traditions/index.html
+++ b/traditions/index.html
@@ -63,7 +63,7 @@
           <!-- </section> -->
 
           <figure>
-            <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
+            <img src="./img/fireworks.webp" alt="Firworks over Hong Kong" />
             <figcaption>
               New Year's fireworks display over Victoria Harbour, Hong Kong.
               <p class="trads-reference">
@@ -95,7 +95,7 @@
             or qilins and perform traditional dances.
           </p>
           <figure>
-            <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
+            <img src="./img/Tin_Hau.webp" alt="Statue of Tin Hau" />
             <figcaption>
               Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
               Hong Kong
@@ -136,7 +136,7 @@
           </div>
           <!-- </section> -->
           <figure>
-            <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
+            <img src="./img/boat.webp" alt="Multiple Dragon Boats" />
             <figcaption>
               Dragon boat race in Hong Kong
               <p class="trads-reference">
