--- a/culture/index.html
+++ b/culture/index.html
@@ -269,6 +269,6 @@
         </ul>
       </footer>
     </div>
-    <script src="/src/index.js"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
