--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </p>
               <p>
                 In 1842 after the First Opium War China ceded Hong Kong to the
-                British, as a result of 100 years of British tyranny English is
+                British, as a result of 100 years of British rule English is
                 widely spoken in the city and street signs have both a Chinese
                 and English translation making it perfect for Westerners who
                 might not be too fluent in Chinese.
